@@ -1,3 +1,8 @@
+2008-02-20 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCClrange.c (findPrevUse): fixed bug 1888147
+	* support/regression/tests/bug1888147.c: new, added
+
 2008-02-20 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c: fixed bugs #1596270, #1736867
